        PR middle-end/15700         * varasm.c (struct alias_pair): Rename from struct output_def_pair.         (alias_pairs): Rename from output_defs.         (find_decl_and_mark_needed): Split out from assemble_alias.         (do_assemble_alias): New.         (assemble_output_def): Remove.         (finish_aliases_1, finish_aliases_2): New.         (process_pending_assemble_output_defs): Remove.         (assemble_alias): Defer aliases for which we don't yet have a         non-external decl for the target symbol.         * passes.c (rest_of_decl_compilation): Register variables with cgraph.         * cgraphunit.c (cgraph_finalize_compilation_unit): Use finish_aliases_1.        * toplev.c (compile_file): Use finish_aliases_2 instead of         process_pending_assemble_output_defs.         * tree.h (finish_aliases_1, finish_aliases_2): Declare.         (process_pending_assemble_output_defs): Remove.

* gcc.c-torture/compile/20040323-1.c: Don't xfail for solaris.
        (_rtld_global): New.
        * gcc.dg/weak/weak-3.c (ffoox1f, ffoox1g): Define.
        * gcc.dg/weak/weak-9.c (notf1, notf2, notf3, notf4): Define.

        * gcc.dg/alias-3.c: New.
        * gcc.dg/alias-4.c: New.
        * gcc.dg/alias-5.c: New.
        * gcc.dg/alias-6.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@96564 138bc75d-0d04-0410-961f-82ee72b054a4